fdo#48557 implement DOCX export of inner margin values for textbox text

Change-Id: I524e3bcd21731ad203a420f60dd328c6551f0eb7